--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ camel.springboot.name = SampleApplication
 # how often to trigger the timer
 timer.period = 2000
 
+server.port=8080
+management.server.port=8081
+
+
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
 #camel.springboot.duration-max-messages=100
@@ -11,7 +15,8 @@ timer.period = 2000
 #camel.springboot.duration-max-idle-seconds=15
 
 # expose actuator endpoint via HTTP
-management.endpoints.web.exposure.include=info,health,camelroutes,jolokia
+management.endpoints.web.exposure.include=info,health,camelroutes,jolokia,hawtio
+#management.endpoints.web.exposure.include=hawtio,jolokia
 
 # show verbose health details (/actuator/info) so you can see Camel information also
 management.endpoint.health.show-details=always
@@ -28,3 +33,19 @@ management.endpoint.camelroutes.read-only = true
 #logging.level.org.apache.camel.spring.boot = INFO
 #logging.level.org.apache.camel.impl = DEBUG
 #logging.level.sample.camel = DEBUG
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jms.JmsAutoConfiguration
+
+
+
+
+logging.level.io.hawt=INFO
+logging.level.org.springframework=WARN
+logging.level.io.undertow=WARN
+
+hawtio.authenticationEnabled=true
+
+
+# turn off
+# scan in the com/foo/routes classpath
+#camel.springboot.xmlRoutes = classpath:me/dealboy/routes/*.xml
