--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,12 +38,14 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jms.JmsAutoC
 
 
 
+# scan in the com/foo/routes classpath
+camel.springboot.xmlRoutes = file:./camel/routes*.xml
 
 logging.level.io.hawt=INFO
 logging.level.org.springframework=WARN
 logging.level.io.undertow=WARN
 
-hawtio.authenticationEnabled=true
+hawtio.authenticationEnabled=false
 
 
 # turn off
